add es-server and es-controllers to requirements

--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
     ],
     "require": {
         "php": "^5.5 || ^7.0",
-        "psr/http-message": "^1.0",
         "easy-system/es-component": "*",
         "easy-system/es-services": "*",
         "easy-system/es-events": "*",
         "easy-system/es-system": "*",
-        "easy-system/es-http": "*",
-        "easy-system/es-mvc": "*"
+        "easy-system/es-server": "*",
+        "easy-system/es-mvc": "*",
+        "easy-system/es-controllers": "*"
     },
     "autoload": {
         "psr-4": {
